--- a/spec/vcr/yelp_locations_show/with_invalid_params/rejects_invalid_id.yml
+++ b/spec/vcr/yelp_locations_show/with_invalid_params/rejects_invalid_id.yml
@@ -27,27 +27,27 @@ http_interactions:
       Content-Type:
       - application/json
       X-Routing-Service:
-      - routing-main--useast1-b9c656cb7-xbkhl; site=public_api_v3
-      X-Zipkin-Id:
-      - 6523560aee2e742e
+      - routing-main--useast1-b9c656cb7-kxmvn; site=public_api_v3
       X-B3-Sampled:
       - '0'
       Server:
       - envoy
+      X-Zipkin-Id:
+      - ff90a64919ec6328
       X-Cloudmap:
       - routing_useast1
       X-Proxied:
-      - 10-65-164-1-useast1bprod
+      - 10-65-85-173-useast1aprod
       X-Extlb:
-      - 10-65-164-1-useast1bprod
+      - 10-65-85-173-useast1aprod
       Accept-Ranges:
       - bytes
       Date:
-      - Fri, 05 Nov 2021 23:14:02 GMT
+      - Sat, 06 Nov 2021 20:38:40 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-dal21278-DAL
+      - cache-fty21344-FTY
       X-Cache:
       - MISS
       X-Cache-Hits:
@@ -56,5 +56,5 @@ http_interactions:
       encoding: UTF-8
       string: '{"error": {"code": "BUSINESS_NOT_FOUND", "description": "The requested
         business could not be found."}}'
-  recorded_at: Fri, 05 Nov 2021 23:14:02 GMT
+  recorded_at: Sat, 06 Nov 2021 20:38:40 GMT
 recorded_with: VCR 6.0.0
