--- a/spec/vcr/yelp_facade/finds_business_by_id.yml
+++ b/spec/vcr/yelp_facade/finds_business_by_id.yml
@@ -24,18 +24,18 @@ http_interactions:
       - keep-alive
       Content-Type:
       - application/json
-      X-Routing-Service:
-      - routing-main--useast1-b9c656cb7-vvcg6; site=public_api_v3
       X-B3-Sampled:
       - '0'
       Ratelimit-Dailylimit:
       - '5000'
-      X-Zipkin-Id:
-      - 6a47eda755d04e23
       Ratelimit-Remaining:
-      - '4994'
+      - '4988'
       Ratelimit-Resettime:
-      - '2021-11-06T00:00:00+00:00'
+      - '2021-11-07T00:00:00+00:00'
+      X-Routing-Service:
+      - routing-main--useast1-b9c656cb7-5n2rr; site=public_api_v3
+      X-Zipkin-Id:
+      - '094312119e32ee7e'
       Server:
       - envoy
       X-Cloudmap:
@@ -49,11 +49,11 @@ http_interactions:
       Accept-Ranges:
       - bytes
       Date:
-      - Fri, 05 Nov 2021 23:14:00 GMT
+      - Sat, 06 Nov 2021 20:38:37 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-dal21269-DAL
+      - cache-fty21356-FTY
       X-Cache:
       - MISS
       X-Cache-Hits:
@@ -86,5 +86,5 @@ http_interactions:
         "2000", "day": 6}], "hours_type": "REGULAR", "is_open_now": true}], "transactions":
         ["pickup", "delivery"], "messaging": {"url": "https://www.yelp.com/raq/RTvR4W7K-59xFFZAUTMTbQ?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_lookup&utm_source=OBMoK3r2ftITcAO2w2E5Ew#popup%3Araq",
         "use_case_text": "Message the Business"}}'
-  recorded_at: Fri, 05 Nov 2021 23:14:00 GMT
+  recorded_at: Sat, 06 Nov 2021 20:38:37 GMT
 recorded_with: VCR 6.0.0
