--- a/spec/vcr/YelpClient/finds_a_location_by_id.yml
+++ b/spec/vcr/YelpClient/finds_a_location_by_id.yml
@@ -24,36 +24,36 @@ http_interactions:
       - keep-alive
       Content-Type:
       - application/json
+      X-Routing-Service:
+      - routing-main--useast1-b9c656cb7-qzzs6; site=public_api_v3
       X-Zipkin-Id:
-      - 624862497fd0b6ed
+      - 71d34d1e098e0633
       X-B3-Sampled:
       - '0'
-      Ratelimit-Dailylimit:
-      - '5000'
       Ratelimit-Remaining:
       - '4990'
-      X-Routing-Service:
-      - routing-main--useast1-b9c656cb7-kv95z; site=public_api_v3
       Ratelimit-Resettime:
-      - '2021-11-07T00:00:00+00:00'
+      - '2021-11-08T00:00:00+00:00'
+      Ratelimit-Dailylimit:
+      - '5000'
       Server:
       - envoy
       X-Cloudmap:
       - routing_useast1
       X-Proxied:
-      - 10-65-91-109-useast1aprod
+      - 10-65-133-10-useast1bprod
       X-Extlb:
-      - 10-65-91-109-useast1aprod
+      - 10-65-133-10-useast1bprod
       Cache-Control:
       - max-age=0, no-store, private, no-transform
       Accept-Ranges:
       - bytes
       Date:
-      - Sat, 06 Nov 2021 20:38:36 GMT
+      - Sun, 07 Nov 2021 16:29:58 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-fty21350-FTY
+      - cache-fty21379-FTY
       X-Cache:
       - MISS
       X-Cache-Hits:
@@ -83,8 +83,8 @@ http_interactions:
         "start": "1100", "end": "1400", "day": 4}, {"is_overnight": false, "start":
         "1530", "end": "2000", "day": 4}, {"is_overnight": false, "start": "1200",
         "end": "2000", "day": 5}, {"is_overnight": false, "start": "1200", "end":
-        "2000", "day": 6}], "hours_type": "REGULAR", "is_open_now": true}], "transactions":
-        ["pickup", "delivery"], "messaging": {"url": "https://www.yelp.com/raq/RTvR4W7K-59xFFZAUTMTbQ?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_lookup&utm_source=OBMoK3r2ftITcAO2w2E5Ew#popup%3Araq",
+        "2000", "day": 6}], "hours_type": "REGULAR", "is_open_now": false}], "transactions":
+        ["delivery", "pickup"], "messaging": {"url": "https://www.yelp.com/raq/RTvR4W7K-59xFFZAUTMTbQ?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_lookup&utm_source=OBMoK3r2ftITcAO2w2E5Ew#popup%3Araq",
         "use_case_text": "Message the Business"}}'
-  recorded_at: Sat, 06 Nov 2021 20:38:36 GMT
+  recorded_at: Sun, 07 Nov 2021 16:29:58 GMT
 recorded_with: VCR 6.0.0
