--- a/spec/vcr/YelpService/_find_location_by_id.yml
+++ b/spec/vcr/YelpService/_find_location_by_id.yml
@@ -24,36 +24,36 @@ http_interactions:
       - keep-alive
       Content-Type:
       - application/json
+      X-Zipkin-Id:
+      - 7a26e571f4fce731
+      X-Routing-Service:
+      - routing-main--useast1-b9c656cb7-r59kn; site=public_api_v3
+      X-B3-Sampled:
+      - '0'
       Ratelimit-Dailylimit:
       - '5000'
-      Ratelimit-Remaining:
-      - '4983'
-      X-Routing-Service:
-      - routing-main--useast1-b9c656cb7-d5nkp; site=public_api_v3
       Server:
       - envoy
       Ratelimit-Resettime:
-      - '2021-11-07T00:00:00+00:00'
-      X-B3-Sampled:
-      - '0'
-      X-Zipkin-Id:
-      - 62d6e193ee6a882f
+      - '2021-11-08T00:00:00+00:00'
+      Ratelimit-Remaining:
+      - '4983'
       X-Cloudmap:
       - routing_useast1
       X-Proxied:
-      - 10-65-164-1-useast1bprod
+      - 10-65-91-109-useast1aprod
       X-Extlb:
-      - 10-65-164-1-useast1bprod
+      - 10-65-91-109-useast1aprod
       Cache-Control:
       - max-age=0, no-store, private, no-transform
       Accept-Ranges:
       - bytes
       Date:
-      - Sat, 06 Nov 2021 20:38:41 GMT
+      - Sun, 07 Nov 2021 16:30:02 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-fty21355-FTY
+      - cache-fty21321-FTY
       X-Cache:
       - MISS
       X-Cache-Hits:
@@ -83,8 +83,8 @@ http_interactions:
         "start": "1100", "end": "1400", "day": 4}, {"is_overnight": false, "start":
         "1530", "end": "2000", "day": 4}, {"is_overnight": false, "start": "1200",
         "end": "2000", "day": 5}, {"is_overnight": false, "start": "1200", "end":
-        "2000", "day": 6}], "hours_type": "REGULAR", "is_open_now": true}], "transactions":
-        ["pickup", "delivery"], "messaging": {"url": "https://www.yelp.com/raq/RTvR4W7K-59xFFZAUTMTbQ?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_lookup&utm_source=OBMoK3r2ftITcAO2w2E5Ew#popup%3Araq",
+        "2000", "day": 6}], "hours_type": "REGULAR", "is_open_now": false}], "transactions":
+        ["delivery", "pickup"], "messaging": {"url": "https://www.yelp.com/raq/RTvR4W7K-59xFFZAUTMTbQ?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_lookup&utm_source=OBMoK3r2ftITcAO2w2E5Ew#popup%3Araq",
         "use_case_text": "Message the Business"}}'
-  recorded_at: Sat, 06 Nov 2021 20:38:41 GMT
+  recorded_at: Sun, 07 Nov 2021 16:30:02 GMT
 recorded_with: VCR 6.0.0
