--- a/spec/vcr/YelpService/_find_location_by_id.yml
+++ b/spec/vcr/YelpService/_find_location_by_id.yml
@@ -24,36 +24,36 @@ http_interactions:
       - keep-alive
       Content-Type:
       - application/json
-      X-Zipkin-Id:
-      - 7a26e571f4fce731
+      Ratelimit-Resettime:
+      - '2021-11-09T00:00:00+00:00'
       X-Routing-Service:
-      - routing-main--useast1-b9c656cb7-r59kn; site=public_api_v3
+      - routing-main--useast1-b9c656cb7-lzm5d; site=public_api_v3
       X-B3-Sampled:
       - '0'
+      X-Zipkin-Id:
+      - 43a23dfde6f732cb
       Ratelimit-Dailylimit:
       - '5000'
+      Ratelimit-Remaining:
+      - '4992'
       Server:
       - envoy
-      Ratelimit-Resettime:
-      - '2021-11-08T00:00:00+00:00'
-      Ratelimit-Remaining:
-      - '4983'
       X-Cloudmap:
       - routing_useast1
       X-Proxied:
-      - 10-65-91-109-useast1aprod
+      - 10-65-164-1-useast1bprod
       X-Extlb:
-      - 10-65-91-109-useast1aprod
+      - 10-65-164-1-useast1bprod
       Cache-Control:
       - max-age=0, no-store, private, no-transform
       Accept-Ranges:
       - bytes
       Date:
-      - Sun, 07 Nov 2021 16:30:02 GMT
+      - Mon, 08 Nov 2021 16:21:12 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-fty21321-FTY
+      - cache-iah17270-IAH
       X-Cache:
       - MISS
       X-Cache-Hits:
@@ -68,7 +68,7 @@ http_interactions:
         "Lucky Noodles", "image_url": "https://s3-media4.fl.yelpcdn.com/bphoto/uoXE8rVcYAV4R6njOCxrpw/o.jpg",
         "is_claimed": true, "is_closed": false, "url": "https://www.yelp.com/biz/lucky-noodles-denver?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_lookup&utm_source=OBMoK3r2ftITcAO2w2E5Ew",
         "phone": "+17209171000", "display_phone": "(720) 917-1000", "review_count":
-        114, "categories": [{"alias": "thai", "title": "Thai"}, {"alias": "noodles",
+        115, "categories": [{"alias": "thai", "title": "Thai"}, {"alias": "noodles",
         "title": "Noodles"}, {"alias": "coffee", "title": "Coffee & Tea"}], "rating":
         4.5, "location": {"address1": "1201 E Colfax Ave", "address2": "Ste 102",
         "address3": "", "city": "Denver", "zip_code": "80218", "country": "US", "state":
@@ -84,7 +84,7 @@ http_interactions:
         "1530", "end": "2000", "day": 4}, {"is_overnight": false, "start": "1200",
         "end": "2000", "day": 5}, {"is_overnight": false, "start": "1200", "end":
         "2000", "day": 6}], "hours_type": "REGULAR", "is_open_now": false}], "transactions":
-        ["delivery", "pickup"], "messaging": {"url": "https://www.yelp.com/raq/RTvR4W7K-59xFFZAUTMTbQ?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_lookup&utm_source=OBMoK3r2ftITcAO2w2E5Ew#popup%3Araq",
+        ["pickup", "delivery"], "messaging": {"url": "https://www.yelp.com/raq/RTvR4W7K-59xFFZAUTMTbQ?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_lookup&utm_source=OBMoK3r2ftITcAO2w2E5Ew#popup%3Araq",
         "use_case_text": "Message the Business"}}'
-  recorded_at: Sun, 07 Nov 2021 16:30:02 GMT
+  recorded_at: Mon, 08 Nov 2021 16:21:12 GMT
 recorded_with: VCR 6.0.0
