--- a/spec/vcr/yelp_locations_show/with_valid_params/renders_locations_information.yml
+++ b/spec/vcr/yelp_locations_show/with_valid_params/renders_locations_information.yml
@@ -24,36 +24,36 @@ http_interactions:
       - keep-alive
       Content-Type:
       - application/json
+      X-Zipkin-Id:
+      - c3bab9d508c4a544
+      Ratelimit-Resettime:
+      - '2021-11-09T00:00:00+00:00'
       X-B3-Sampled:
       - '0'
-      Ratelimit-Dailylimit:
-      - '5000'
+      X-Routing-Service:
+      - routing-main--useast1-b9c656cb7-mpmck; site=public_api_v3
       Server:
       - envoy
       Ratelimit-Remaining:
-      - '4986'
-      Ratelimit-Resettime:
-      - '2021-11-08T00:00:00+00:00'
-      X-Zipkin-Id:
-      - af555626688397e0
-      X-Routing-Service:
-      - routing-main--useast1-b9c656cb7-59jpb; site=public_api_v3
+      - '4995'
+      Ratelimit-Dailylimit:
+      - '5000'
       X-Cloudmap:
       - routing_useast1
       X-Proxied:
-      - 10-65-85-173-useast1aprod
+      - 10-65-190-140-useast1bprod
       X-Extlb:
-      - 10-65-85-173-useast1aprod
+      - 10-65-190-140-useast1bprod
       Cache-Control:
       - max-age=0, no-store, private, no-transform
       Accept-Ranges:
       - bytes
       Date:
-      - Sun, 07 Nov 2021 16:30:01 GMT
+      - Mon, 08 Nov 2021 16:21:11 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-fty21328-FTY
+      - cache-iah17277-IAH
       X-Cache:
       - MISS
       X-Cache-Hits:
@@ -84,5 +84,5 @@ http_interactions:
         "start": "1100", "end": "2200", "day": 5}, {"is_overnight": false, "start":
         "1100", "end": "2200", "day": 6}], "hours_type": "REGULAR", "is_open_now":
         false}], "transactions": ["delivery", "pickup"]}'
-  recorded_at: Sun, 07 Nov 2021 16:30:01 GMT
+  recorded_at: Mon, 08 Nov 2021 16:21:11 GMT
 recorded_with: VCR 6.0.0
