--- a/spec/vcr/YelpClient/finds_a_location_by_id.yml
+++ b/spec/vcr/YelpClient/finds_a_location_by_id.yml
@@ -27,33 +27,33 @@ http_interactions:
       X-B3-Sampled:
       - '0'
       X-Zipkin-Id:
-      - b922a2803daa7705
+      - 8cead9c7ae0d4cd5
+      Ratelimit-Remaining:
+      - '4968'
       Server:
       - envoy
       Ratelimit-Dailylimit:
       - '5000'
       Ratelimit-Resettime:
-      - '2021-11-09T00:00:00+00:00'
-      Ratelimit-Remaining:
-      - '4999'
+      - '2021-11-10T00:00:00+00:00'
       X-Routing-Service:
-      - routing-main--useast1-b9c656cb7-lfkd2; site=public_api_v3
+      - routing-main--useast1-b9c656cb7-gs95m; site=public_api_v3
       X-Cloudmap:
       - routing_useast1
       X-Proxied:
-      - 10-65-91-109-useast1aprod
+      - 10-65-190-140-useast1bprod
       X-Extlb:
-      - 10-65-91-109-useast1aprod
+      - 10-65-190-140-useast1bprod
       Cache-Control:
       - max-age=0, no-store, private, no-transform
       Accept-Ranges:
       - bytes
       Date:
-      - Mon, 08 Nov 2021 16:21:08 GMT
+      - Tue, 09 Nov 2021 23:40:32 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-iah17258-IAH
+      - cache-dal21252-DAL
       X-Cache:
       - MISS
       X-Cache-Hits:
@@ -86,5 +86,5 @@ http_interactions:
         "2000", "day": 6}], "hours_type": "REGULAR", "is_open_now": false}], "transactions":
         ["pickup", "delivery"], "messaging": {"url": "https://www.yelp.com/raq/RTvR4W7K-59xFFZAUTMTbQ?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_lookup&utm_source=OBMoK3r2ftITcAO2w2E5Ew#popup%3Araq",
         "use_case_text": "Message the Business"}}'
-  recorded_at: Mon, 08 Nov 2021 16:21:08 GMT
+  recorded_at: Tue, 09 Nov 2021 23:40:31 GMT
 recorded_with: VCR 6.0.0
