--- a/spec/vcr/YelpService/_find_location_by_id.yml
+++ b/spec/vcr/YelpService/_find_location_by_id.yml
@@ -24,36 +24,36 @@ http_interactions:
       - keep-alive
       Content-Type:
       - application/json
-      Ratelimit-Resettime:
-      - '2021-11-09T00:00:00+00:00'
+      Ratelimit-Dailylimit:
+      - '5000'
+      Server:
+      - envoy
+      Ratelimit-Remaining:
+      - '4961'
       X-Routing-Service:
-      - routing-main--useast1-b9c656cb7-lzm5d; site=public_api_v3
+      - routing-main--useast1-b9c656cb7-8nbkr; site=public_api_v3
+      Ratelimit-Resettime:
+      - '2021-11-10T00:00:00+00:00'
       X-B3-Sampled:
       - '0'
       X-Zipkin-Id:
-      - 43a23dfde6f732cb
-      Ratelimit-Dailylimit:
-      - '5000'
-      Ratelimit-Remaining:
-      - '4992'
-      Server:
-      - envoy
+      - 15a752f263b1c7dd
       X-Cloudmap:
       - routing_useast1
       X-Proxied:
-      - 10-65-164-1-useast1bprod
+      - 10-65-190-140-useast1bprod
       X-Extlb:
-      - 10-65-164-1-useast1bprod
+      - 10-65-190-140-useast1bprod
       Cache-Control:
       - max-age=0, no-store, private, no-transform
       Accept-Ranges:
       - bytes
       Date:
-      - Mon, 08 Nov 2021 16:21:12 GMT
+      - Tue, 09 Nov 2021 23:40:37 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-iah17270-IAH
+      - cache-dal21282-DAL
       X-Cache:
       - MISS
       X-Cache-Hits:
@@ -86,5 +86,5 @@ http_interactions:
         "2000", "day": 6}], "hours_type": "REGULAR", "is_open_now": false}], "transactions":
         ["pickup", "delivery"], "messaging": {"url": "https://www.yelp.com/raq/RTvR4W7K-59xFFZAUTMTbQ?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_lookup&utm_source=OBMoK3r2ftITcAO2w2E5Ew#popup%3Araq",
         "use_case_text": "Message the Business"}}'
-  recorded_at: Mon, 08 Nov 2021 16:21:12 GMT
+  recorded_at: Tue, 09 Nov 2021 23:40:37 GMT
 recorded_with: VCR 6.0.0
