--- a/spec/vcr/yelp_facade/finds_business_by_id.yml
+++ b/spec/vcr/yelp_facade/finds_business_by_id.yml
@@ -26,34 +26,34 @@ http_interactions:
       - application/json
       X-B3-Sampled:
       - '0'
-      Ratelimit-Dailylimit:
-      - '5000'
-      Ratelimit-Remaining:
-      - '4997'
-      X-Routing-Service:
-      - routing-main--useast1-b9c656cb7-72tv2; site=public_api_v3
       Server:
       - envoy
+      Ratelimit-Dailylimit:
+      - '5000'
+      X-Routing-Service:
+      - routing-main--useast1-b9c656cb7-6d497; site=public_api_v3
+      Ratelimit-Remaining:
+      - '4966'
       X-Zipkin-Id:
-      - 550f02071a8ffe40
+      - d168057a13e0dc4d
       Ratelimit-Resettime:
-      - '2021-11-09T00:00:00+00:00'
+      - '2021-11-10T00:00:00+00:00'
       X-Cloudmap:
       - routing_useast1
       X-Proxied:
-      - 10-65-190-140-useast1bprod
+      - 10-65-164-1-useast1bprod
       X-Extlb:
-      - 10-65-190-140-useast1bprod
+      - 10-65-164-1-useast1bprod
       Cache-Control:
       - max-age=0, no-store, private, no-transform
       Accept-Ranges:
       - bytes
       Date:
-      - Mon, 08 Nov 2021 16:21:09 GMT
+      - Tue, 09 Nov 2021 23:40:33 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-iah17229-IAH
+      - cache-dal21261-DAL
       X-Cache:
       - MISS
       X-Cache-Hits:
@@ -86,5 +86,5 @@ http_interactions:
         "2000", "day": 6}], "hours_type": "REGULAR", "is_open_now": false}], "transactions":
         ["delivery", "pickup"], "messaging": {"url": "https://www.yelp.com/raq/RTvR4W7K-59xFFZAUTMTbQ?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_lookup&utm_source=OBMoK3r2ftITcAO2w2E5Ew#popup%3Araq",
         "use_case_text": "Message the Business"}}'
-  recorded_at: Mon, 08 Nov 2021 16:21:09 GMT
+  recorded_at: Tue, 09 Nov 2021 23:40:33 GMT
 recorded_with: VCR 6.0.0
