--- a/spec/vcr/yelp_locations_show/with_invalid_params/rejects_invalid_id.yml
+++ b/spec/vcr/yelp_locations_show/with_invalid_params/rejects_invalid_id.yml
@@ -26,28 +26,28 @@ http_interactions:
       - '102'
       Content-Type:
       - application/json
-      X-Zipkin-Id:
-      - 24dcf7e1dca605d6
       X-B3-Sampled:
       - '0'
+      X-Zipkin-Id:
+      - 538ad3106725e4fb
+      X-Routing-Service:
+      - routing-main--useast1-b9c656cb7-2cc88; site=public_api_v3
       Server:
       - envoy
-      X-Routing-Service:
-      - routing-main--useast1-b9c656cb7-h64kh; site=public_api_v3
       X-Cloudmap:
       - routing_useast1
       X-Proxied:
-      - 10-65-164-1-useast1bprod
+      - 10-65-190-140-useast1bprod
       X-Extlb:
-      - 10-65-164-1-useast1bprod
+      - 10-65-190-140-useast1bprod
       Accept-Ranges:
       - bytes
       Date:
-      - Mon, 08 Nov 2021 16:21:11 GMT
+      - Tue, 09 Nov 2021 23:40:35 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-iah17254-IAH
+      - cache-dal21225-DAL
       X-Cache:
       - MISS
       X-Cache-Hits:
@@ -56,5 +56,5 @@ http_interactions:
       encoding: UTF-8
       string: '{"error": {"code": "BUSINESS_NOT_FOUND", "description": "The requested
         business could not be found."}}'
-  recorded_at: Mon, 08 Nov 2021 16:21:11 GMT
+  recorded_at: Tue, 09 Nov 2021 23:40:35 GMT
 recorded_with: VCR 6.0.0
